Wed Jun  4 17:47:59 CEST 2008 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Vertex.java: New sqrDistance3D() method
	to eliminate calls to Math.sqrt when possible.

Tue Jun  3 15:22:37 CEST 2008 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Vertex.java: Replace getNeighboursNodes()
	by a new getNeighbourIteratorVertex() method which returns an
	Iterator<Vertex>. Also provide methods to return incident edges
	and triangles.

Thu May 22 10:51:39 CEST 2008 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/oemm/MeshReader.java: Fix NullPointerException
	in buildMesh() when adjacency relations are requested.

Wed Mar 26 13:26:57 CET 2008 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/xmldata/MeshReader.java (readObject3D): Discard
	outer triangles when reading, they will be created by
	Mesh.buildAdjacency() if needed.
	* src/org/jcae/mesh/amibe/ds/Vertex.java (getLocalQuadric): Return
	null on boundary nodes, we do not know yet what to do in this case.
	* src/org/jcae/mesh/amibe/algos3d/ImproveConnectivity.java: Fix
	NullPointerException with open surfaces.
	* src/org/jcae/mesh/amibe/algos3d/LengthDecimateHalfEdge.java
	  src/org/jcae/mesh/amibe/algos3d/QEMDecimateHalfEdge.java: New
	maxlength argument to not create long edges.
	* src/org/jcae/mesh/amibe/ds/HalfEdge.java
	  src/org/jcae/mesh/amibe/ds/VirtualHalfEdge.java (checkSwap3D): Add
	an argument to not create edges longer than this value.

Sun Feb 24 18:40:59 CET 2008 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/JCAEFormatter.java: Replace log4j by
	java.util.logging.Logger in all java files.  This new class is
	designed to produce log output similar to log4j.
	* src/org/jcae/mesh/MeshView.java
	  src/org/jcae/mesh/java3d/Viewer.java
	  src/org/jcae/mesh/java3d/ComputeEdgesConnectivity.java
	  src/org/jcae/mesh/java3d/XMLBranchGroup.java: Files removed,